<!--
Kamaljit Mahal N01377647 Section B
Dillon Permaul N01372657 Section B
Janpreet Singh N01361405 Section B
Meet Gajjar N01391319 Section B
-->

<resources>
    <string name="app_name">SmartLock</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_key">Are you sure you want to exit this app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_setting">Settings</string>
    <string name="Brightness_level">Brightness level</string>
    <string name="value_percentage">20%</string>
    <string name="motion_capture">Motion Sensor</string>
    <string name="forth_screen">Motion</string>
    <string name="switchpreference">Switch_notification</string>
    <string name="Notification_label">Notification</string>
    <string name="Notification_messge">Enable Notification</string>

    <string name="welcome_to_the_smart_lock">Welcome to the Smart Lock</string>
    <string name="request_permission">Request Permission</string>
    <string name="lock_or_unlock">Lock or Unlock</string>
    <string name="togglebutton">TURN OFF MOTION SENSOR</string>
    <string name="Motion_Reading"> Motion Count: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_review">Review</string>
    <string name="Review">FifthScreen</string>
    <string name="fifth_screen">Review</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="name_string">Enter Your Name</string>
    <string name="email_string">Enter your email</string>
    <string name="String_phone_number">Phone Number</string>
    <string name="About_us_paragraph">This is a home security smart lock that can be unlocked and locked using a mobile device and a RFID Card. This can be used in people’s everyday lives as many people tend to lose their keys or the combinations to locks. This smart lock is very convenient and user friendly as all you need to unlock the lock is either your mobile device or an RFID Card.
</string>
    <string name="on_button_1"> Get Sensor Data</string>
    <string name="off_button2">OFF</string>
    <string name="help_page"> If you having problem with SmartLock app you can contact us by sending email or calling our technical support team</string>
    <string name="Email_helppage"> SmartLockSupportTeam@gmail.com</string>
    <string name="help_title">Help</string>
    <string name="email_tag">Email:</string>
    <string name="num_tag">+1(647)482-9871</string>
    <string name="about_us_title">About Us</string>
    <string name="string_registration">Registration</string>
    <string name="submitting_review">Submitting Review. . .</string>
    <string name="feedback">Feedback</string>
    <string name="click_me">Temperature/Humidity</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="notif">Notification</string>
    <string name="NotiMessage">This is a SmartLock notification</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter a phone number</string>
    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a password with at least 4 characters, at least 1 digit, at least 1 lower case letter, at least 1 upper case letter, at least 1 special character, no spaces</string>
    <string name="contact_number_helppage">Contact Number:</string>
    <string name="registration">Registration</string>
    <string name="fn">Full Name</string>
    <string name="em">Email</string>
    <string name="psw">Password</string>
    <string name="rg">Register</string>

    <string name="fab_st">Click on Fab button to register</string>
    <string name="t_h">Temperature: 20.3°C </string>
    <string name="t_h1">Humidity: 50.6% </string>

    <string name="tv">TextView</string>
    <string name="fb">feedback</string>
    <string name="sucess_rg">You have been registered</string>
    <string name="tryag">Please try again</string>
    <string name="sucessrgs">Successfully Registered</string>
    <string name="ty_fb">Thank you for your feedback!</string>
    <string name="error1">Username can\'t be empty</string>
    <string name="error2">Please enter right email Address</string>
    <string name="error3">Enter a right mobile number</string>
    <string name="s_rg">Successfully Registered</string>
    <string name="dr_lock">The Door is Locked!</string>
    <string name="dr_unlock">The Door is Unlocked!</string>
    <string name="perm1">You have already granted this permission!</string>
    <string name="p_n">Permission needed</string>
    <string name="p_s">We need permissions to access your storage</string>
    <string name="ok">ok</string>
    <string name="cncl">cancel</string>
    <string name="p_g">Permission GRANTED</string>
    <string name="p_d">Permission DENIED</string>
    <string name="msg">message</string>
    <string name="ms_on">Motion Sensor is on !!!</string>
    <string name="ms_off">Motion Sensor is OFF !!!</string>
    <string name="change_bg">Change Background</string>
    <string name="motion_counter">5</string>


</resources>