<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/motion_bg"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/sensor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="72dp"
        android:text="@string/motion_capture"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="252dp"
        android:layout_height="38dp"
        android:layout_marginBottom="168dp"
        android:text="@string/Motion_Reading"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ON"
        android:layout_width="91dp"
        android:layout_height="47dp"
        android:background="@color/black"
        android:text="@string/on_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/OFF"
        android:layout_width="96dp"
        android:layout_height="56dp"
        android:text="@string/off_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/msgTxt"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:text="TextView"
        android:textSize="9pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

</androidx.constraintlayout.widget.ConstraintLayout>